=================
Changes for Crate
=================

Unreleased
==========

NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart

 - Added the ``KILL ALL`` statement which can be used to cancel running
   operations

 - Added new table settings that can be set on ``CREATE TABLE``
   and changed/reset with ``ALTER TABLE``.

 - Added the ``concat`` scalar function and the concat operator ``||``.

 - Updated Elasticsearch to 1.5.2

 - Updated crash to version 0.12.0 which contains the following changes:

    - added ``--version`` to cli interface to show crash version and exit

    - Fixed broken 'mixed' output style due to overriding import

    - Improved readability of sql syntax highlighting

    - Attempting to use unknown command now results in an error

 - Added the IF NOT EXISTS clause to the CREATE TABLE statement


2015/05/21 0.49.1
=================

 - Fix: Do not throw exception on querying `sys.shards` while
   unassigned shards are changing

 - Fix: Removed unnecessary close context calls on CollectContext

 - Support to register a plugin with different settings to multiple crate
   instances using the same JVM


2015/05/20 0.48.6
=================

 - Optimized ``DELETE FROM <partitioned_table>``

 - Fix: Handle concurrently dropped partitions while collecting rows

 - Fix: Updated es/upstream to prevent errors caused by too many cluster
   state updates when dropping tables with a huge amount of partitions

 - Fixed an issue that caused a node stop to always take up at least 10 seconds

 - Further improved bulk partition creation which can occur during ``COPY
   FROM`` or INSERTS with multi-values into partitioned tables


2015/05/15 0.48.5
=================

 - Fix: Deleting a partitioned table could return a succesful query result
   even if some partitions were not deleted correctly

 - ``COPY FROM``: imports from S3 will now retry the import in case of a
   read timeout.
